[package]
name = "log-ndc"
version = "0.2.0"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
description = "log extension with NDC-like functionality"
repository = "https://github.com/stepancheg/rust-log-ndc"

[dependencies]
log = { version = "0.4", features = ["std"] }
